import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '2.0.4'
}

group 'net.com.faforever.neroxis'
version "${version}"

sourceCompatibility = JavaVersion.VERSION_1_8


test {
    testLogging {
        events "failed"
        showStandardStreams = true
    }
}


repositories {
    maven { url "https://jitpack.io" }
    mavenCentral()
}

dependencies {
    implementation("org.luaj:luaj-jse:3.0.1")
    implementation("com.google.guava:guava:28.0-jre")
    implementation('com.dslplatform:dsl-json-java8:1.9.8')
    compileOnly('org.projectlombok:lombok:1.18.14')
    annotationProcessor('org.projectlombok:lombok:1.18.14')
    annotationProcessor('com.dslplatform:dsl-json-java8:1.9.8')

    testCompile('junit:junit:4.11')
}

shadowJar {
    getArchiveFileName().set("NeroxisGen_${generatorVersion}.jar")
    manifest {
        attributes 'Main-Class': 'com.faforever.neroxis.map.generator.MapGenerator',
                "Implementation-Version": generatorVersion,
                "Impletementation-Title": "Neroxis Map Generator"
    }
}

task populatorJar(type: ShadowJar) {
    getArchiveBaseName().set('MapPopulator')
    from(sourceSets.main.output) {
        manifest {
            attributes 'Main-Class': 'com.faforever.neroxis.map.populator.MapPopulator'
        }
    }
    project.configurations.implementation.canBeResolved = true
    configurations = [project.configurations.implementation]
}

task evaluatorJar(type: ShadowJar) {
    getArchiveBaseName().set('MapEvaluator')
    from(sourceSets.main.output) {
        manifest {
            attributes 'Main-Class': 'com.faforever.neroxis.map.evaluator.MapEvaluator'
        }
    }
    project.configurations.implementation.canBeResolved = true
    configurations = [project.configurations.implementation]
}

task transformerJar(type: ShadowJar) {
    getArchiveBaseName().set('MapTransformer')
    from(sourceSets.main.output) {
        manifest {
            attributes 'Main-Class': 'com.faforever.neroxis.map.transformer.MapTransformer'
        }
    }
    project.configurations.implementation.canBeResolved = true
    configurations = [project.configurations.implementation]
}

task detectorJar(type: ShadowJar) {
    getArchiveBaseName().set('GeneratedMapDetector')
    from(sourceSets.main.output) {
        manifest {
            attributes 'Main-Class': 'com.faforever.neroxis.map.evaluator.GeneratedMapDetector'
        }
    }
    project.configurations.implementation.canBeResolved = true
    configurations = [project.configurations.implementation]
}